objects/Field_Change__c.object
<CustomObject>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Chnages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Field Change</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Field Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>